k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: log-correlation-gateway
  namespace: log-correlation
  labels:
    app: log-correlation
spec:
  selector:
    istio: internalgateway
  servers:
    - hosts:
        - log-correlation.interface-internal.ai
      port:
        name: https
        number: 443
        protocol: HTTP
